
[workspace]
resolver = "2"
members = [
    "receive_handler",
    "lib",
    "sqs_handler",
    "daily_handler",
    "dyanmo_export_start_handler",
    "dyanmo_export_finish_handler"
]


[workspace.dependencies]
anyhow = "1.0.82"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-smithy-types = "1.2.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
axum = "0.7.5"
aws_lambda_events = "0.15.1"
lambda_runtime = "0.13.0"
