[package]
name = "dyanmo_export_start_handler"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
aws_lambda_events = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
lambda_runtime = { workspace = true }


#shared lib
lib = { path = "../lib" }