[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-smithy-types = { workspace = true }
aws_lambda_events = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid =  { workspace = true }
axum = { workspace = true }
chrono = "0.4.38"

aws-sdk-dynamodb = "1.43.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
aws-sdk-bedrockruntime = "1.42.0"
aws-sdk-sqs = "1.3.0"
aws-sdk-s3 = "1.57.0"
reqwest = "0.12.8"
openssl = { version = "0.10.35", features = ["vendored"] }
rand = "0.8.5"